# trebek

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DESIGN.md  Dockerfile  Makefile  README.md  SETUP.md  com.user.jeopardytranscriber.plist  docker-compose.yml  gemini_savings.md  pyproject.toml  requirements.txt
.agent/: ARCHITECTURE.md  AUDIT_FINDINGS.md  PHILOSOPHY.md  STATUS.md  STYLE.md  TESTING.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
docs/: embeddings_feature.md  gemini_pricing.md
docs/archive/: step2_trap_schema_config.md
docs/explorations/: 2026-04-24-product-visionary-job-stats.md
docs/plans/: job_telemetry_implementation.md
scripts/: debug_diarization.py  test_local_extraction.py  validate_llm_pipeline.py
scripts/validate_llm_pipeline/: __init__.py  __main__.py  diagnostics.py  extraction.py  schemas.py
src/: audio_processor.py  cli.py  config.py  console.py  core_database.py  directory_watcher.py  file_manager.py  gpu_orchestrator.py  llm_pipeline.py  main.py  physics_engine.py  schema.sql  schemas.py  single_run.py  state_machine.py  transcriber.py
tests/: conftest.py  test_config_validation.py  test_core_database.py  test_database_resilience.py  test_gpu_orchestrator.py  test_job_telemetry.py  test_json_recovery.py  test_llm_pipeline.py  test_llm_pipeline_e2e.py  test_pass1_normalization.py  test_pipeline_recovery.py  test_schema_integrity.py  test_schemas.py  test_speaker_normalization.py  test_state_machine.py  test_validation.py
tests/analysis/: test_buzzer_analysis.py  test_embeddings.py
tests/core/: test_banner.py  test_cli.py  test_config_validation.py  test_diagnostics.py  test_exceptions.py  test_gpu_orchestrator.py  test_schemas.py  test_state_machine.py  test_state_machine_gaps.py  test_validation.py
tests/database/: test_database_writer.py  test_fk_filter.py  test_job_telemetry.py  test_pipeline_queries.py  test_relational_commit.py  test_schema_integrity.py  test_writer_lifecycle.py
tests/llm/: test_board.py  test_verify.py  (+13 more)
trebek/: __init__.py  cli.py  cli_docker.py  config.py  console.py  core_database.py  exceptions.py  gpu_orchestrator.py  llm_pipeline.py  main.py  physics_engine.py  schema.sql  schemas.py  state_machine.py  status.py
(+56 files in other folders)
