[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trebek"
version = "1.1.4"
description = "A high-fidelity multimodal AI pipeline for J! data extraction"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Arvind", email = "arvind@example.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]
license = {text = "AGPL-3.0-only"}
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=23.1.0",
    "google-genai>=0.1.2",
    "rich>=13.0.0",
]

[project.scripts]
trebek = "trebek.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["trebek*"]

[tool.setuptools.package-data]
trebek = ["py.typed", "schema.sql"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.0.280",
    "mypy>=1.4.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["."]

[tool.mypy]
strict = true
ignore_missing_imports = true
warn_return_any = false

[[tool.mypy.overrides]]
module = ["scripts.*", "tests.*"]
ignore_errors = true
